# ros2-prac

./: .gitignore  readme.md
cp2 node/node/: ros2_cpp_node
cp2 node/node/cmake/: CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
cp2_node/cp2_ws/: novel0.txt  novel1.txt  novel2.txt
cp2_node/cp2_ws/install/: local_setup.sh  setup.sh
cp2_node/cp2_ws/log/: latest_build
cp2_node/node/: CMakeLists.txt  test_args.cpp
cp2_node/node/cmake/: CMakeCache.txt  ros2_node
cp2_node/node/cmake/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
cp2_node/node/demo_cpp_pkg/src/: cpp_node.cpp
cp2_node/node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cp2_node/node/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node
cp2_node/node/install/demo_cpp_pkg/share/demo_cpp_pkg/: package.sh  package.xml
cp2_node/node/log/: latest_build
cp2_node/py/: node.py
cp2_node/py/install/: local_setup.sh  setup.sh
cp2_node/py/log/: latest_build
cp3_topic/topic_practice_ws/install/: local_setup.sh  setup.sh
cp3_topic/topic_practice_ws/log/: latest_build
cp3_topic/topic_ws/: novel1.txt  novel2.txt  novel3.txt
cp3_topic/topic_ws/install/: local_setup.sh  setup.sh
cp3_topic/topic_ws/log/: latest_build
cp4_service/cp4_ws/install/: local_setup.sh  setup.sh
oblisian/: mermind 用法.md  route.md
oblisian/.obsidian/: workspace.json
oblisian/chapter0 基本概念/: Basic concept.md  图形化.md  概述.md
oblisian/chapter2 node/: node.md
oblisian/chapter3 topic/: 话题.md
oblisian/chapter4 service/: 服务和参数.md
(+100 files in other folders)
